# flappy

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO
.cargo/: config.toml
.github/workflows/: rust.yml
.profs/luke.m1/: cargo-timing-20250421T220443Z.html
docs/: DEVEL.md
scripts/: distmore
src/: components.rs  constants.rs  main.rs  plugin.rs  resources.rs  setup.rs  systems.rs  utils.rs
