[package]
name = "flappy"
version = "1.0.4"
edition = "2024"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking"] }
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.12.1", default-features = false, features = ["js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations
[profile.dev.package."*"]
opt-level = 3
