[package]
name = "flappy"
version = "1.0.4"
edition = "2024"

[dependencies]
bevy = { version = "0.15.3" }
rand = "0.9.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.12.1", default-features = false, features = ["js"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Profiler
[profile.tracy]
inherits = "release"
bevy = { features = ["trace_tracy"] }

[dev-dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "trace_tracy",
    "dynamic_linking",
] }
tracing-tracy = "0.11.4"
tracy-client = "0.18.0"
